--- a/index.html
+++ b/index.html
@@ -9,12 +9,32 @@
 <body>
     <h1>NSIweb</h1>
     <h2>alban lefort</h2>
+    <h3>
+        <ul>
+            <li>git add index.html</li>
+            <li>git commit -m ''</li>
+            <li>git push</li>
+        </ul>
+    </h3>
     <ul>
         <li>ex1</li>
         <li>ex2</li>
         <li>ex3</li>
+        <li>ex4</li>
     </ul>
-    
-    
+    <table border="1">
+        <tr>
+            <td>A</td>
+            <td>B</td>
+            <td>C</td>
+        </tr>
+        <tr>
+            <td>a</td>
+            <td>b</td>
+            <td>c</td>
+        </tr>
+
+    </table>
+
 </body>
 </html>
