--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB SITE NSI</title>
 </head>
+
 <body>
     <h1>NSIweb</h1>
     <h2>alban lefort</h2>
     <h3>
         <ul>
+            <li>git status</li>
             <li>git add index.html</li>
             <li>git commit -m ''</li>
             <li>git push</li>
@@ -37,4 +40,5 @@
     </table>
 
 </body>
+
 </html>
