--- a/index.html
+++ b/index.html
@@ -11,20 +11,14 @@
 <body>
     <h1>NSIweb</h1>
     <h2>alban lefort</h2>
-    <h3>
-        <ul>
-            <li>git status</li>
-            <li>git add index.html</li>
-            <li>git commit -m ''</li>
-            <li>git push</li>
-        </ul>
-    </h3>
-    <ul>
-        <li>ex1</li>
-        <li>ex2</li>
-        <li>ex3</li>
-        <li>ex4</li>
-    </ul>
+    <h1>FORMULAIRE</h1>
+        <p>
+            <h2>boisson favoris</h2>
+        <input type="checkbox" name="boisson[]" id="Coca">
+        <input type="checkbox" name="boisson[]" id="Ice tea">
+        <input type="checkbox" name="boisson[]" id="Oasis">
+        <input type="checkbox" name="boisson[]" id="Fanta">
+    </p>
     <table border="1">
         <tr>
             <td>A</td>
