--- a/index.html
+++ b/index.html
@@ -13,26 +13,17 @@
     <h2>alban lefort</h2>
     <h1>FORMULAIRE</h1>
         <p>
+            <form action="recolte_donnees.php" method="post">
             <h2>boisson favoris</h2>
-        <input type="checkbox" name="boisson[]" id="Coca">
-        <input type="checkbox" name="boisson[]" id="Ice tea">
-        <input type="checkbox" name="boisson[]" id="Oasis">
-        <input type="checkbox" name="boisson[]" id="Fanta">
-    </p>
-    <table border="1">
-        <tr>
-            <td>A</td>
-            <td>B</td>
-            <td>C</td>
-        </tr>
-        <tr>
-            <td>a</td>
-            <td>b</td>
-            <td>c</td>
-        </tr>
-
-    </table>
-
+        <input type="checkbox" name="boisson[]" id="">Coca <br>
+        <input type="checkbox" name="boisson[]" id="">Ice tea <br>
+        <input type="checkbox" name="boisson[]" id="">Oasis <br>
+        <input type="checkbox" name="boisson[]" id="">Fanta <br>
+        </p>
+        <p>
+            <input type="submit" value="Validé">
+        </p>
+    </form>
 </body>
 
 </html>
